NXP-32438: follow removal of fragment registry